Update: Bootstrap 5 Beta

--- a/src/views/components/event-link.njk
+++ b/src/views/components/event-link.njk
@@ -16,11 +16,11 @@
           </div>
           <div class="row">
             <section class="col-auto kbl-text soft">
-              <i class="fas fa-map-marker-alt mr-2"></i>
+              <i class="fas fa-map-marker-alt me-2"></i>
               <span class="text">{{ event.location }}</span>
             </section>
             <section class="col-auto kbl-text soft">
-              <i class="far fa-calendar mr-2"></i>
+              <i class="far fa-calendar me-2"></i>
               <span class="text">{{ event.date }}</span>
             </section>
           </div>
