--- a/src/views/components/toast.njk
+++ b/src/views/components/toast.njk
@@ -1,9 +1,9 @@
 {% macro toast(toastInfo = {}) %}
   <div class="toast">
     <div class="toast-header">
-      <strong class="mr-auto">Bootstrap</strong>
+      <strong class="me-auto">Bootstrap</strong>
       <small class="text-muted">just now</small>
-      <button type="button" class="ml-2 mb-1 close" data-dismiss="toast">
+      <button type="button" class="ms-2 mb-1 close" data-dismiss="toast">
         <span><i class="fas fa-times"></i></span>
       </button>
     </div>
