--- a/src/views/pages/admin/admin.njk
+++ b/src/views/pages/admin/admin.njk
@@ -11,7 +11,7 @@
     <div class="row justify-content-center">
       <div class="col-12 col-md-10 col-lg-8 col-xl-7">
         <h2 class="kbl-heading text-center">KAABiL Site Editing Guide</h2>
-        <p class="kbl-text text-thicc text-left">
+        <p class="kbl-text text-thicc text-start">
           This a guide for changing the website under the current software stack. The guide will also explain
           the purpose for the stack, as well as how to navigate it. The guide is split across several parts
           to keep them from becoming one massive article to scroll through. The first part is all about setting up
