--- a/src/views/pages/admin/dev-env/dev-env.njk
+++ b/src/views/pages/admin/dev-env/dev-env.njk
@@ -9,7 +9,7 @@
 
   <div class="container nav-margin pt-5">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-left">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-start">
         <h3 class="kbl-heading pb-4 text-center">The Development Environment</h3>
         <p class="kbl-text text-thicc">
           The development environment is the environment in which the local version of the website will run while you test it.
