--- a/src/views/pages/contact/contact.njk
+++ b/src/views/pages/contact/contact.njk
@@ -115,7 +115,7 @@
         <div class="kbl-text"><b>Fax:</b> +1 (435) 797-2766</div>
         <div class="kbl-text"><b>Email:</b> rkaundal@usu.edu</div>
 
-        <a href="/contact#enroll" class="btn kbl-btn-1-solid text-left mt-4">Go to Contact Form</a>
+        <a href="/contact#enroll" class="btn kbl-btn-1-solid text-start mt-4">Go to Contact Form</a>
 
 
         <div class="my-5"></div>
