--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -75,7 +75,7 @@
         <section class="col-12 col-sm-8 col-md-6 col-lg-4 mb-3 mb-lg-0">
           <div class="h-100 gray-bg">
             <section class="mb-3">
-              <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-toggle="modal" data-target="#videoModal">
+              <a class="video-play" href="https://www.youtube.com/watch?v=r-Ay28WKFLY" data-bs-toggle="modal" data-target="#videoModal">
                 <img src="{{ RaikouServer }}/image/raw/bioinfo/rs_usu_winter.jpg?w=742&h=432" alt="" class="img-fluid">
               </a>
             </section>
