--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -96,7 +96,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col text-left-sm pl-sm-5">
+          <div class="col text-start-sm ps-sm-5">
             <a href="/people/our-team" class="kbl-link dull"><b>View all</b></a>
           </div>
         </div>
