--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -11,27 +11,27 @@
   <article class="container-fluid px-3">
     <section class="row px-5 w-100 mb-1">
 
-      <div class="col-3 pl-5">
+      <div class="col-3 ps-5">
         <a class="navbar-brand d-inline" href="/">
           <img src="/assets/img/kbllogo.png">
         </a>
       </div>
 
-      <div class="col-9 mt-auto pr-5">
+      <div class="col-9 mt-auto pe-5">
 
         <section class="row pb-4">
-          <div class="col-12 text-right">
+          <div class="col-12 text-end">
             <a class="kbl-btn-1" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                 Covid 19 Tracker
             </a>
-            <a class="kbl-btn-1 ml-2" href="/contact">
+            <a class="kbl-btn-1 ms-2" href="/contact">
                 Contact
             </a>
           </div>
         </section>
 
         <section class="row">
-          <div class="col-12 text-right">
+          <div class="col-12 text-end">
             {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGenBS4, toolAnchorGenBS4, genHeaderLink %}
 
             <!--
