--- a/src/views/pages/admin/run-local/run-local.njk
+++ b/src/views/pages/admin/run-local/run-local.njk
@@ -9,7 +9,7 @@
 
   <div class="container nav-margin pt-5">
     <div class="row justify-content-center">
-      <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-left">
+      <div class="col-12 col-md-10 col-lg-8 col-xl-7 text-start">
         <h3 class="kbl-heading pb-4 text-center">Run the Website Locally</h3>
 
         <p class="kbl-text text-thicc">
