--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -14,18 +14,18 @@
         <div class="col-6 text-center">
           <h1 class="text-center blog">{{ title }}</h1>
           <img class="img-fluid col-12 p-0" src="{{ event.img }}">
-          <div class="text-left event-details mt-2">
-            <span class="mr-4"><i class="ion-location mr-2"></i>{{ event.location }}</span>
-            <span><i class="ion-calendar mr-3"></i>{{ event.date }}</span>
+          <div class="text-start event-details mt-2">
+            <span class="me-4"><i class="ion-location me-2"></i>{{ event.location }}</span>
+            <span><i class="ion-calendar me-3"></i>{{ event.date }}</span>
           </div>
-          <div class="text-left">
+          <div class="text-start">
             {% include (file) %}
             <h3 class="kbl-heading pt-4">From Media</h3>
           </div>
           <div class="row">
             {% for pic in event.media %}
               <img class="col-12 col-sm-6 col-md-4 my-3 event-thumbnail" style="cursor: pointer;"
-                data-toggle="modal" data-target="#modal{{ loop.index0 }}" src="{{ pic }}">
+                data-bs-toggle="modal" data-target="#modal{{ loop.index0 }}" src="{{ pic }}">
 
               <div class="modal fade" id="modal{{ loop.index0 }}" tabindex="-1">
                 <div class="modal-dialog">
