--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -24,11 +24,11 @@
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/citsatdb">
-            <div class="row pl-0">
-              <div class="col-3 pl-0 my-auto">
+            <div class="row ps-0">
+              <div class="col-3 ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/IMG_20200113_151858.jpg?a=height&w=3&h=4" class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-1">
+              <div class="col-9 ps-0 pt-1">
                 <span class="date">Jan 11-15, 2020</span>
                 <h5 class="header">Naveen presents at International Plant Animal Genome Conference</h5>
                 <p class="desc">
@@ -41,7 +41,7 @@
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newadmin1">
-            <div class="row pl-0">
+            <div class="row ps-0">
               <div class="col-9 pt-1">
                 <span class="date">Mar 21, 2020</span>
                 <h5 class="header">New HPC Admin: Shelby McCowan</h5>
@@ -49,7 +49,7 @@
                   Shelby McCowan has joined the team and will be taking over as the new HPC Admin.
                 </p>
               </div>
-              <div class="col-3 pr-0 my-auto">
+              <div class="col-3 pe-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/profile/shelby.jpg?a=height&w=6&h=6" class="img-fluid">
               </div>
             </div>
@@ -65,11 +65,11 @@
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/newdeephpi">
-            <div class="row pl-0">
-              <div class="col-3 pl-0 my-auto">
+            <div class="row ps-0">
+              <div class="col-3 ps-0 my-auto">
                 <img src="{{ RaikouServer }}/image/aspect/bioinfo/events/PAG-2019/g2.jpg?a=height&w=5&h=6" class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-1">
+              <div class="col-9 ps-0 pt-1">
                 <span class="date">Dec 1, 2019</span>
                 <h5 class="header">deepHPI is Online!</h5>
                 <p class="desc">
@@ -83,12 +83,12 @@
 
         <section class="row news-item-container">
           <a class="news-item col-12" href="/news/covidtracker">
-            <div class="row pl-0">
-              <div class="col-3 pl-0 my-auto">
+            <div class="row ps-0">
+              <div class="col-3 ps-0 my-auto">
                 <img src="https://intermountainhealthcare.org/-/media/coronavirus-covid-19.jpg?la=en&h=286&w=300&mw=300&hash=CE04AC2D6DB0A5068DBB7D0CCEF7636A1C66C738"
                   class="img-fluid">
               </div>
-              <div class="col-9 pl-0 pt-1">
+              <div class="col-9 ps-0 pt-1">
                 <span class="date">March 26, 2020</span>
                 <h5 class="header">COVID-19 Tracker</h5>
                 <p class="desc">
