--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -42,14 +42,14 @@ body {
 }
 
 .kbl-top {
-  margin-top: var(--navbar-height)!important;
+  // margin-top: var(--navbar-height)!important;
   padding-left: 0!important;
   padding-right: 0!important;
   background: var(--color-bg-gray);
 }
 
 .nav-margin {
-  margin-top: var(--navbar-height)!important;
+  // margin-top: var(--navbar-height)!important;
 }
 
 .header-icon-wrapper {
@@ -222,7 +222,6 @@ footer {
 .kbl-header-img {
   object-fit: cover;
   object-position: center 30%;
-  margin-top: 60px;
   width: 100%;
   height: 270px;
 }
