--- a/src/views/pages/home/_head-carousel.njk
+++ b/src/views/pages/home/_head-carousel.njk
@@ -20,7 +20,7 @@
                         </div>
                     </li>
                     <li class="seq-step1" id="step2"
-                        style="background:url(assets/img/usu_ag_trim.jpg); background-position-y: -400px; background-color: black;  background-size:cover">
+                        style="background:url(assets/img/USU_ag.jpg); background-position-y: -400px; background-color: black;  background-size:cover">
 
                         <div class="bg-blend"></div>
                         <div class="seq-content">
