--- a/src/views/universal/_navbar.njk
+++ b/src/views/universal/_navbar.njk
@@ -2,12 +2,7 @@
 
 {% macro navbar(activePage="", activeSubpage="") %}
 
-{% from "./_navbar-small.njk" import navbarSmall %}
-
-<!-- {{ navbarSmall(activePage, activeSubpage) }} -->
-
-<nav class="navbar navbar-expand-md navbar-light bg-light fixed-top shadow-md bs4 d-none d-lg-block"
-  style="background: #fff!important;">
+<nav class="navbar navbar-expand-md fixed-top shadow-md d-none d-lg-block">
   <article class="container-fluid px-3">
     <section class="row px-5 w-100 mb-1">
 
@@ -34,22 +29,6 @@
           <div class="col-12 text-end">
             {% from "./_navbar-options.njk" import navOptions, calcDropdown, anchorGenBS4, toolAnchorGenBS4, genHeaderLink %}
 
-            <!--
-            {% for option in navOptions %}
-              <span class="bs4 col {{ calcDropdown(option.options)}} {{ currentRoute(option.name, activePage) }}">
-                  {{ anchorGenBS4(option.name, option.options, option.link) }}
-                  {% if option.options %}
-                  <div class="dropdown-menu bs4 nav-dropdown mt-2">
-                    {{ genHeaderLink(option.name, option.link) }}
-                    {% for subOption in option.options %}
-                     {{ toolAnchorGenBS4(subOption.name, subOption.link, option.name, "dropdown-item nav-dropdown-item py-2 {{ activeSubroute(subOption.name, activeSubpage) }}") }}
-                    {% endfor %}
-                  </div>
-                  {% endif %}
-              </span>
-            {% endfor %}
-          -->
-
             {% from "./_navbar-options.njk" import genHeaderAnchor, dropdownAnchorGen, dropdownAnchorTitleGen %}
             {% for option in navOptions %}
               <span class="col {{ calcDropdown(option.options) }} {{ currentRoute(option.name, activePage) }}">
@@ -74,4 +53,5 @@
     </section>
   </article>
 </nav>
+<div class="nav-spacer d-none d-lg-block"></div>
 {% endmacro %}
