Fix spacing issues on mobile on home screen

--- a/src/views/components/person-card.njk
+++ b/src/views/components/person-card.njk
@@ -1,5 +1,5 @@
 {% macro personCard(img="", name="", subtitle="") %}
-  <div class="kbl-person-card-container mx-auto">
+  <div class="kbl-person-card-container mx-auto mb-3">
     <div class="kbl-person-card">
       <figure>
         <img class="w-100 mb-2" style="height: 250px;" src="{{  RaikouServer }}{{ img }}">
