--- a/src/views/pages/home/home.njk
+++ b/src/views/pages/home/home.njk
@@ -124,7 +124,7 @@
       </section>
     </article>
 
-    <div class="container mt-5 px-5">
+    <div class="container mt-5 px-5 mb-3">
       <div class="research-fact">
         <div class="row py-5">
           <div class="col-4 text-center">
