--- a/src/views/pages/news/news.njk
+++ b/src/views/pages/news/news.njk
@@ -14,11 +14,11 @@
   {{ breadcrumb([{name: 'home', link: '/'}, {name: 'news', link: '/news'}]) }}
 
   <article class="container-fluid pb-5 pt-1 my-5">
-    <div class="row">
+    <div class="row justify-content-center">
 
       <!-- News - General -->
-      <article class="col">
-        <section class="text-center col-header mb-4" style="font-size: 140%;">
+      <article class="col-11 col-md">
+        <section class="text-center col-header mb-1 mb-md-4" style="font-size: 140%;">
           <b>General</b>
         </section>
 
@@ -58,8 +58,8 @@
       </article>
 
       <!-- News - Science -->
-      <article class="col">
-        <section class="text-center col-header mb-4" style="font-size: 140%;">
+      <article class="col-11 col-md">
+        <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0" style="font-size: 140%;">
           <b>Science</b>
         </section>
 
@@ -101,8 +101,8 @@
       </article>
 
       <!-- Blog -->
-      <article class="col-sm-3">
-        <section class="text-center col-header mb-4" style="font-size: 140%;">
+      <article class="col-11 col-md-3">
+        <section class="text-center col-header mb-1 mb-md-4 mt-4 mt-md-0" style="font-size: 140%;">
           <b>Blog</b>
         </section>
 
