Mobile-friendly people page

--- a/src/views/pages/people/_new-rakesh.njk
+++ b/src/views/pages/people/_new-rakesh.njk
@@ -1,5 +1,5 @@
-<div class="row mt-4">
-  <div class="col-3">
+<div class="row mt-4 justify-content-center">
+  <div class="col-11 col-md-3">
     <div class="kbl-person-card-container">
       <div class="kbl-person-card rakesh-card">
         <figure>
@@ -30,7 +30,7 @@
       </div>
     </div>
   </div>
-  <div class="col-9">
+  <div class="col-11 col-md-9">
     <section class="mb-5">
       <h2 class="rakesh-header">Dr. Rakesh Kaundal</h2>
       <h5 class="workplace-header"><a href="https://psc.usu.edu/" class="kbl-link">Department of Plants, Soils and Climate</a></h5>
