remove container fluid

--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -13,7 +13,7 @@
   {% from "components/breadcrumb.njk" import breadcrumb %}
   {{ breadcrumb([{name: 'home', link: '/'}, {name: 'people', link: '/people'}]) }}
 
-  <article class="container-fluid">
+  <article class="container">
     {% include "./_new-rakesh.njk" %}
 
     {% from "components/person-card.njk" import personCardModal %}
