Tools open in new tab

--- a/src/views/components/tool-card.njk
+++ b/src/views/components/tool-card.njk
@@ -1,7 +1,7 @@
 {% macro toolCard(tool) %}
   <section class="px-4">
     <div class="kbl-tool-card">
-      <a href="{{ tool.link }}">
+      <a href="{{ tool.link }}" target="_blank">
         <section class="thumb">
           <img src="{{ tool.img }}">
         </section>
