--- a/src/views/pages/home/the-team.njk
+++ b/src/views/pages/home/the-team.njk
@@ -86,10 +86,10 @@
             {{ personCard("/image/raw/bioinfo/profile/2.jpg", "Rousselene B. Larson", "Bioinformatics Scientist") }}
           </div>
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-            {{ personCard("/image/raw/bioinfo/profile/Kaige Zhang.jpg", "Kaige Zhang", "Research Assistant, PhD") }}
+            {{ personCard("/image/raw/bioinfo/profile/shelby.jpg", "Shelby McCowan", "Systems Administrator") }}
           </div>
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
-            {{ personCard("/image/raw/bioinfo/profile/loaiza orduz-cristian.jpg", "Cristian D. Loaiza", "MS Student | PSC") }}
+            {{ personCard("/image/raw/people/raghav/raghav.jpg", "Raghav Kataria", "PhD Student | PSC") }}
           </div>
           <div class="col-12 col-md-4 col-sm-6 col-lg-3">
             {{ personCard("/image/raw/bioinfo/profile/1.jpg", "Naveen Duhan", "PhD Student | PSC") }}
