fix deepHPI tool picture

--- a/src/views/pages/tools/_tool-data.njk
+++ b/src/views/pages/tools/_tool-data.njk
@@ -97,7 +97,7 @@
 %}
 
 {% set deepHPI = {
-    img: "/assets/img/tools/legumeSSRdb.png",
+    img: "/assets/kbl-img/deephpi.png",
     title: "deepHPI",
     link: "http://bioinfo.usu.edu/deepHPI/"
   }
