Add 2021 to publications and conferences

--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -19,7 +19,7 @@
 
 <article class="container pt-5 pb-3">
   <section class="row justify-content-center">
-    {{ selector("2020", routerYearRange) }}
+    {{ selector("2020-2021", routerYearRange) }}
     {{ selector("2017-2019", routerYearRange) }}
     {{ selector("2014-2016", routerYearRange) }}
     {{ selector("2011-2013", routerYearRange) }}
