--- a/src/views/pages/publications/conferences/conferences.njk
+++ b/src/views/pages/publications/conferences/conferences.njk
@@ -22,7 +22,8 @@
   {% from './dates/02-04.njk' import pub2004, pub2002 %}
 
   {% set conferences = [
-    {range: '2020', conf: [], year: '2020'},
+    {range: '2020-2021', conf: [], year: '2021'},
+    {range: '2020-2021', conf: [], year: '2020'},
     {range: '2017-2019', conf: pub2019, year: '2019'},
     {range: '2017-2019', conf: pub2018, year: '2018'},
     {range: '2017-2019', conf: pub2017, year: '2017'},
@@ -51,7 +52,7 @@
     </section>
 
     <section class="row justify-content-center py-5">
-      {{ selector("2020", routerYearRange) }}
+      {{ selector("2020-2021", routerYearRange) }}
       {{ selector("2017-2019", routerYearRange) }}
       {{ selector("2014-2016", routerYearRange) }}
       {{ selector("2011-2013", routerYearRange) }}
