--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -32,7 +32,7 @@
 {% set tools = {
   name: "Tools",
   options: [
-    {name: "Host-Pathogen Prediction", link: "/tools#hpi"},
+    {name: "Host-Pathogen Interactions", link: "/tools#hpi"},
     {name: "Cellular Localization Prediction", link: "/tools#cellularloc"},
     {name: "Metagenomics", link: "/tools#metagenomics"},
     {name: "Databases", link: "/tools#db"},
