Add 2020 research papers

--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,11 +1,26 @@
-{% set pub2019 = [
+{% set pub2020 = [
+  {
+    authors: "Duhan, N., Meshram, M., Loaiza, C.D. and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "citSATdb: genome wide Simple Sequence Repeats (SSR) marker database of citrus species for germplasm characterization and improvement. Genes 11(12): 1486.",
+    doiLink: "https://www.mdpi.com/2073-4425/11/12/1486?utm_source=releaseissue&utm_medium=email&utm_campaign=releaseissue_genes&utm_term=doilink122",
+    doiTitle: "10.3390/genes11121486"
+  },
+  {
+    authors: "Loaiza, C.D. and <b>Kaundal, R<sup>*</sup>.</b>",
+    content: "PredHPI: an integrated web server platform for the detection and visualization of host-pathogen interactions using sequence-based methods. Bioinformatics, btaa862.",
+    doiLink: "https://doi.org/10.1093/bioinformatics/btaa862",
+    doiTitle: "10.1093/bioinformatics/btaa862"
+  },
+  {
+    authors: "Loaiza, C.D., Duhan, N., Lister, M. and <b>Kaundal, R<sup>*</sup></b>",
+    content: "In silico prediction of host-pathogen protein interactions in melioidosis pathogen Burkholderia pseudomallei and human reveals novel virulence factors and their targets. Briefings in Bioinformatics 00(00): 1-18",
+    doiLink: "http://dx.doi.org/10.1093/bib/bbz162",
+    doiTitle: "10.1093/bib/bbz162"
+  }
+]
+%}
 
-{
-  authors: "Loaiza CD<sup>$</sup>, Duhan N<sup>$</sup>, Lister M, and Kaundal R<sup>*</sup>.",
-  content: "<i>In silico</i> prediction of host-pathogen protein interactions in melioidosis pathogen <i>Burkholderia pseudomallei</i> and human reveals novel virulence factors and their targets. <i>Briefings in Bioinformatics</i> (in press)",
-  doiLink: "http://dx.doi.org/10.1093/bib/bbz162",
-  doiTitle: "10.1093/bib/bbz162"
-},
+{% set pub2019 = [
 
 {
   authors: "Sahu SS<sup>$</sup>, Loaiza CD<sup>$</sup>, and Kaundal R<sup>*</sup>.",
@@ -15,7 +30,7 @@
 },
 
 {
-  authors: "Sharma B, Batz TA, Kaundal R, Kramer EM, Sanders UR, Mellano VJ, Duhan N, Larson RB.",
+  authors: "Sharma B., Batz T.A., Kaundal R., Kramer E.M., Sanders U.R., Mellano V.J., Duhan N., Larson R.B.",
   content: 'Developmental and Molecular Changes Underlying the Vernalization-Induced Transition to Flowering in <i>Aquilegia coerulea</i> (James). <i>Genes</i>, <b>10</b>(10): 734. <em>PMCID:</em> <a href="https://www.mdpi.com/2073-4425/10/10/734" class="kbl-link" target="_blank">31546687</a>',
   doiLink: 'https://www.mdpi.com/2073-4425/10/10/734',
   doiTitle: '10.3390/genes10100734'
