--- a/src/views/universal/_navbar-options.njk
+++ b/src/views/universal/_navbar-options.njk
@@ -3,8 +3,7 @@
 {% set research = {
   name: "Research",
   options: [
-    {name: "Research Areas", link: "/research/research-areas"},
-    {name: "Editorials", link: "/research/editorials"}
+    {name: "Research Areas", link: "/research/research-areas"}
   ],
   link: "/research"
   }
@@ -24,7 +23,8 @@
 {% set publications = {
   name: "Publications",
   options: [
-    {name: "Conferences and Talks", link: "/publications/conferences"}
+    {name: "Conferences and Talks", link: "/publications/conferences"},
+    {name: "Editorials", link: "/publications/editorials"}
   ],
   link: "publications"
   }
