micro interactions for publications, WCAG

--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -8,3 +8,4 @@
 @import './components/glass-card';
 @import './components/tool-card';
 @import './components/mobile-navbar';
+@import './components/publication';
