--- a/src/views/components/publication.njk
+++ b/src/views/components/publication.njk
@@ -1,7 +1,7 @@
 {% macro publication(article) %}
-  <article class="row py-2">
+  <article class="row py-2 publication">
     <section class="col-3">
-      <p class="kbl-text soft">
+      <p class="authors">
         {{ article.authors | safe }}
       </p>
     </section>
