--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -44,7 +44,7 @@ $color-secondary: #3b4961;
   --transparent: rgba(#fff, 0);
   --color-text-hard: #212121;
   --color-text-main: #2a2a2a;
-  --color-text-soft: #6f6f6f;
+  --color-text-soft: #606060;
 
   --color-btn-gray: #c4c4c4;
 }
