--- a/src/views/pages/home/_multi-carousel-new.njk
+++ b/src/views/pages/home/_multi-carousel-new.njk
@@ -8,6 +8,16 @@
         </div>
       {% endfor %}
     </div>
-    <button class="btn kbl-btn-circle-solid leftLst" ><b><</b></button>
-    <button class="btn kbl-btn-circle-solid rightLst"><b>></b></button>
+    <div class="leftLst carousel-btn">
+      <span class="fa-stack" style="vertical-align: top;">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-arrow-left fa-stack-1x fa-inverse"></i>
+      </span>
+    </div>
+    <div class="rightLst carousel-btn">
+      <span class="fa-stack" style="vertical-align: top;">
+        <i class="fas fa-circle fa-stack-2x"></i>
+        <i class="fas fa-arrow-right fa-stack-1x fa-inverse"></i>
+      </span>
+    </div>
 </article>
