--- a/src/views/pages/tools/tools.njk
+++ b/src/views/pages/tools/tools.njk
@@ -9,10 +9,10 @@
 
   <article class="container-fluid kbl-top mb-4">
     <div class="row justify-content-center pt-4">
-      <div class="col-auto">
+      <div class="col-12 col-md-auto text-center">
         <h1><ion-icon name="cube-outline" class="kbl-header-icon"></ion-icon></h1>
       </div>
-      <div class="col-auto pt-3 header-icon-wrapper">
+      <div class="col-auto pt-3 header-icon-wrapper text-center text-md-start">
         <h1>Tools</h1>
         <h6>
           Services straight from students at KAABiL
