--- a/src/views/pages/people/people.njk
+++ b/src/views/pages/people/people.njk
@@ -27,9 +27,9 @@
       </div>
     </div>
 
-    <div class="row mt-3 justify-content-center justify-content-md-start">
+    <div class="row mt-3 justify-content-center">
       {% for person in bioinfoStaff %}
-        <div class="col-md-3 col-sm-6 col-11 text-center">
+        <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
           {{ personCardModal(person) }}
         </div>
       {% endfor %}
@@ -43,9 +43,9 @@
       </div>
     </div>
 
-    <div class="row mt-3 justify-content-center justify-content-md-start">
+    <div class="row mt-3 justify-content-center">
       {% for person in gradStudents %}
-        <div class="col-md-3 col-sm-6 col-11 text-center">
+        <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
           {{ personCardModal(person) }}
         </div>
       {% endfor %}
@@ -59,9 +59,9 @@
       </div>
     </div>
 
-    <div class="row mt-3 justify-content-center justify-content-md-start">
+    <div class="row mt-3 justify-content-center">
       {% for person in undergradStudents %}
-        <div class="col-md-3 col-sm-6 col-11 text-center">
+        <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
           {{ personCardModal(person) }}
         </div>
       {% endfor %}
@@ -75,9 +75,9 @@
       </div>
     </div>
 
-    <div class="row mt-3 justify-content-center justify-content-md-start">
+    <div class="row mt-3 justify-content-center">
       {% for person in alumni %}
-        <div class="col-md-3 col-sm-6 col-11 text-center">
+        <div class="col-xl-3 col-md-4 col-sm-6 col-11 text-center">
           {{ personCardModal(person) }}
         </div>
       {% endfor %}
