Add Kolton Hauck

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -127,12 +127,12 @@
 
 {% set kolton = {
     name: "Kolton Hauck",
-    subtitle: "BSc | Bioengineering",
+    subtitle: "BSc Biological Engineering",
     modifier: "Hauck",
     type: "Undergraduate",
-    bio: "n/a",
-    email: "none",
-    img: "/image/raw/bioinfo/profile/profile_pic.jpeg",
+    bio: "Kolton is a Biological Engineering major and is working on a minor in Computer Science. He wants to use computers to solve modern-day biological problems. He enjoys eating, sleeping and working out.",
+    email: "hauckmkolton@gmail.com",
+    img: "/image/raw/bioinfo/profile/khauck.jpg",
     social: []
   }
 %}
