--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -46,8 +46,7 @@
     social: []
   }
 %}
-<!-- Naveen ResearchGate -->
-<!-- https://www.researchgate.net/profile/Naveen_Duhan -->
+
 {% set naveen = {
     name: "Naveen Duhan",
     subtitle: "PhD Student | PSC",
@@ -91,7 +90,7 @@
 
 {% set david = {
     name: "David Guevara",
-    subtitle: "PhD",
+    subtitle: "PhD Student | CS",
     modifier: "Guevara",
     type: "Graduate",
     bio: "n/a",
