add shelby mccowan website and linkedin

--- a/src/views/pages/people/people-data.njk
+++ b/src/views/pages/people/people-data.njk
@@ -120,7 +120,10 @@
     bio: "Shelby is a Biochemistry major who aspires to go into software engineering. He has worked with mobile apps, websites (including the front and back end), and desktop applications. He is a percussionist in his spare time.",
     email: "itsme@shelbymccowan.com",
     img: "/image/raw/bioinfo/profile/shelby.jpg",
-    social: []
+    social: [
+      {type: "website", link: "https://shelbymccowan.com"},
+      {type: "linkedin", link: "https://www.linkedin.com/in/shelby-mccowan-44718a166/"}
+    ]
   }
 %}
 
