Fix events modals

--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -56,6 +56,7 @@ $color-researchgate: #40ba9b;
 $color-facebook: #3b5998;
 $color-linkedin: #2867B2;
 $color-twitter: #1DA1F2;
+$color-soundcloud: #FE5000;
 
 $logo-map: ("google": $color-google, "orcid": $color-orcid, "researchgate": $color-researchgate,
-            "facebook": $color-facebook, "linkedin": $color-linkedin, "twitter": $color-twitter, "kbl": $color-primary);
+            "facebook": $color-facebook, "linkedin": $color-linkedin, "twitter": $color-twitter, "soundcloud": $color-soundcloud, "kbl": $color-primary);
