Make events pictures look prettier

--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -13,7 +13,7 @@
       <div class="row justify-content-center">
         <div class="col-6 text-center">
           <h1 class="text-center blog">{{ title }}</h1>
-          <img class="img-fluid col-12 p-0" src="{{ event.img }}">
+          <img class="img-fluid col-12 p-0 event-img" src="{{ event.img }}">
           <div class="text-start event-details mt-2">
             <span class="me-4"><i class="ion-location me-2"></i>{{ event.location }}</span>
             <span><i class="ion-calendar me-3"></i>{{ event.date }}</span>
@@ -24,24 +24,24 @@
           </div>
           <div class="row">
             {% for pic in event.media %}
-              <img class="col-12 col-sm-6 col-md-4 my-3 event-thumbnail"
-                data-bs-toggle="modal" data-bs-target="#modal{{ loop.index0 }}" src="{{ pic }}">
+              <section class="col-12 col-sm-6 col-md-4 my-3 ">
+                <img class="event-thumbnail" style="cursor: pointer;"
+                  data-bs-toggle="modal" data-bs-target="#modal{{ loop.index0 }}" src="{{ pic }}">
+              </section>
 
-              <div class="modal fade" id="modal{{ loop.index0 }}" tabindex="-1">
+              <article class="modal fade" id="modal{{ loop.index0 }}" tabindex="-1">
                 <div class="modal-dialog">
                   <div class="modal-content">
-                    <div class="modal-body">
-                      <section class="container-fluid">
-                        <div class="row no-gutters">
-                          <div class="col-12">
-                            <img class="img-fluid" src="{{ pic }}"/>
-                          </div>
+                    <section class="container-fluid py-4">
+                      <div class="row no-gutters">
+                        <div class="col-12">
+                          <img class="img-fluid" src="{{ pic }}"/>
                         </div>
-                      </section>
-                    </div>
+                      </div>
+                    </section>
                   </div>
                 </div>
-              </div>
+              </article>
             {% endfor %}
           </div>
         </div>
