Semantic HTML and new KBL properties

--- a/src/views/pages/events/_events.scss
+++ b/src/views/pages/events/_events.scss
@@ -4,4 +4,10 @@
 
 .event-thumbnail {
   border-radius: var(--border-radius);
+  border: solid 1px transparent;
+  transition: var(--time-mid);
+
+  &:hover {
+    border-color: var(--color-primary-light);
+  }
 }
