--- a/src/views/pages/publications/publications.njk
+++ b/src/views/pages/publications/publications.njk
@@ -14,7 +14,7 @@
   {{ breadcrumb([{name: 'home', link: '/'}, {name: 'publications', link: '/publications'}]) }}
 
   {% from "components/publication.njk" import publication %}
-  {% from "./_data.njk" import pub2020, pub2019, pub2018, pub2016, pub2014, pub2013, pub2012, pub2011, pub2010, pub2009, pub2007, pub2006, pub2005 %}
+  {% from "./_data.njk" import pub2021, pub2020, pub2019, pub2018, pub2016, pub2014, pub2013, pub2012, pub2011, pub2010, pub2009, pub2007, pub2006, pub2005 %}
   {% from './_functions.njk' import selector, activeCheck %}
 
 <article class="container pt-5 pb-3">
@@ -29,6 +29,14 @@
 </article>
 
 <article class="container {{ activeCheck('2020-2021', routerYearRange) }}">
+  <section class="py-4">
+    <div class="kbl-header-bar py-2 text-center mb-2">
+      <h4 class="kbl-heading my-auto">2021</h4>
+    </div>
+    {% for article in pub2021 %}
+      {{ publication(article) }}
+    {% endfor %}
+  </section>
   <section class="py-4">
     <div class="kbl-header-bar py-2 text-center mb-2">
       <h4 class="kbl-heading my-auto">2020</h4>
