--- a/src/views/pages/publications/_data.njk
+++ b/src/views/pages/publications/_data.njk
@@ -1,6 +1,6 @@
 {% set pub2021 = [
   {
-    authors: "Kaundal, R., Duhan, N., Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D.",
+    authors: "Kaundal, R.<sup>*</sup>, Duhan, N., Acharya, B., Pudussery, M., Ferreira, J., Suarez, D., and Sandhu, D.",
     content: "Transcriptional profiling of two contrasting genotypes uncovers molecular mechanisms underlying salt tolerance in alfalfa",
     doiLink: "https://doi.org/10.1038/s41598-021-84461-w",
     doiTitle: "10.1038/s41598-021-84461-w"
