add event modal slide show

--- a/src/scss/_export-components.scss
+++ b/src/scss/_export-components.scss
@@ -9,3 +9,4 @@
 @import './components/tool-card';
 @import './components/mobile-navbar';
 @import './components/publication';
+@import './components/event-modal';
