--- a/src/views/pages/events/template.njk
+++ b/src/views/pages/events/template.njk
@@ -29,19 +29,9 @@
                   data-bs-toggle="modal" data-bs-target="#modal{{ loop.index0 }}" src="{{ pic }}">
               </section>
 
-              <article class="modal fade" id="modal{{ loop.index0 }}" tabindex="-1">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <section class="container-fluid py-4">
-                      <div class="row no-gutters">
-                        <div class="col-12">
-                          <img class="img-fluid" src="{{ pic }}"/>
-                        </div>
-                      </div>
-                    </section>
-                  </div>
-                </div>
-              </article>
+              {% from "components/event-modal.njk" import EventModal %}
+
+              {{ EventModal(loop.index0, pic) }}
             {% endfor %}
           </section>
         </div>
@@ -51,6 +41,7 @@
     {% include "universal/_footer.njk" %}
     {% from "universal/_footer-scripts.njk" import scripts %}
     {{ scripts() }}
+    <script src="assets/js/kbl/events-ss.js"></script>
   </body>
 </html>
 {% endmacro %}
